# GraduateWork

./: .env.example  README.md  TODO.md  docker-compose.yaml  pyproject.toml
.zed/: settings.json
alarm/: README.md
alarm/console/: main.py  pyproject.toml
alarm/telegram/: main.py  pyproject.toml
collector/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml
collector/.github/workflows/: cicd.yml
collector/.zed/: settings.json
collector/src/builtins/: pyproject.toml
collector/src/builtins/src/collector_builtins/: __init__.py
collector/src/builtins/src/collector_builtins/client/STM32/: __init__.py  fake.py  real.py
collector/src/builtins/src/collector_builtins/sensor/: __init__.py  constant.py  cosine.py  gauss.py  seasonal.py
collector/src/collector/: __init__.py  main.py
collector/src/collector/client/: fake.py
collector/src/collector/db/: engine.py  models.py  utils.py
collector/src/collector/imitator/: __init__.py  sensor_simulator.py
collector/src/collector/mcu/: mcu.py
collector/src/collector/mock_sensor/: sensor_base.py
collector/src/collector/mock_sensor/builtin/: __init__.py  constant.py  cosine.py
collector/src/collector/pages/: __init__.py  sidebar.py
collector/src/collector/utils/: __init__.py
collector/src/core/: pyproject.toml
collector/src/core/src/collector_core/: __init__.py  client.py  daemon.py  fingerprint.py  mcu.py
collector/src/core/src/collector_core/client/: client_base.py  real.py
collector/src/core/src/collector_core/db/: __init__.py  models.py  utils.py
collector/src/core/src/collector_core/mcu/: __init__.py  mcu.py
collector/src/core/src/collector_core/mock_sensor/builtin/: gauss.py  seasonal.py
collector/src/daemon/: pyproject.toml
collector/src/daemon/src/collector_daemon/: __init__.py  daemon.py  logger.py
collector/src/ui/: main.py  pyproject.toml
core/: .dockerignore  .env  .env.example  Dockerfile  README.md  TODO.md  __init__.py  main.py  pyproject.toml  run.py
core/.zed/: settings.json
core/src/: api.py
core/src/db/: engine.py  models.py  utils.py
mcu/: README.md
predictor/: Dockerfile  README.md  TODO.md  main.py  pyproject.toml
predictor/datasets/: .gitignore  datasets.md
predictor/src/predictor/builtin/datastream/: smart_homes_temp.py
predictor/src/predictor/cli/: __init__.py  main.py
predictor/src/predictor/data/stream/: __init__.py  base.py
predictor/src/predictor/evaluation/: __init__.py  metrics.py
predictor/src/predictor/models/: base.py
predictor/src/predictor/models/builtin/: dense_net.py  linear_regression.py
sensors/: pyproject.toml
sensors/src/sensors/: __init__.py  sensor.py
sensors/src/sensors/builtin/: __init__.py  humidity.py  temperature.py
