[project]
name = "graduate"
license = "MIT"
readme = "README.md"
description = ""
requires-python = ">=3.13"
version = "0.1.0"

[dependency-groups]
dev = [
    "ruff>=0.14.7",
    "ty>=0.0.1a30",
]

[tool.uv.workspace]
members = [
    "api",
    "collector",
    "core",
    "predictor",
    "sensors",
]
