[project]
name = "collector"
version = "0.1.0"
description = "Collector service for sensor data"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "requests>=2.28.0",
    "result>=0.17.0",
    "sensors",
    "sqlalchemy>=2.0.44",
    "streamlit>=1.52.1",
    "streamlit-autorefresh>=1.0.1",
]

[tool.uv.sources]
sensors = { git = "https://github.com/meshushkevich/Sensors.git", branch = "main" }

[build-system]
requires = ["uv_build>=0.9.16,<0.10.0"]
build-backend = "uv_build"
