[tool.uv.workspace]
members = [
    "src/ui",
    "src/core",
]

[project]
name = "collector"
version = "0.1.0"
description = "Metaproject for collector"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "collector-core",
    "collector-ui",
]

[tool.uv.sources]
collector-core = { workspace = true }
collector-ui = { workspace = true }



# [build-system]
# requires = ["uv_build>=0.9.16,<0.10.0"]
# build-backend = "uv_build"
