[project]
name = "predictor"
version = "0.1.0"
description = "Predictor service for sensor data analysis"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=1.21.0",
    "scikit-learn>=1.0.0",
    "pandas>=1.3.0",
    "requests>=2.28.0",
    "psycopg2-binary>=2.9.5",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
