[project]
name = "predictor"
version = "0.1.0"
description = "Predictor service for sensor data analysis"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.3.3",
    "sensors",
    "torch>=2.9.1",
]

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[tool.uv.sources]
sensors = { git = "https://github.com/meshushkevich/Sensors.git" }
