[project]
name = "collector-core"
version = "0.1.0"
description = "TODO"
readme = "README.md"
authors = [
    { name = "Maksim Shushkevich", email = "m.e.shushkevich@yandex.com" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "requests>=2.28.0",
    "result>=0.17.0",
    "sensors",
    "sqlalchemy>=2.0.44",
]

[tool.uv.sources]
sensors = { git = "https://github.com/meshushkevich/Sensors.git", branch = "main" }


[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"
