[project]
name = "collector-daemon"
version = "0.1.0"
description = "TODO"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Maksim Shushkevich", email = "m.e.shushkevich@yandex.com" }
]
dependencies = [
    "collector-core",
]

[tool.uv.sources]
collector-core = { workspace = true }

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"
